[package]
name = "thinclaw-workspace"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
deadpool-postgres = { version = "0.14", optional = true }
pgvector = { version = "0.4", features = ["postgres"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thinclaw-identity = { version = "0.1.0", path = "../thinclaw-identity" }
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-safety = { version = "0.1.0", path = "../thinclaw-safety" }
thinclaw-soul = { version = "0.1.0", path = "../thinclaw-soul" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thiserror = "2"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = []
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
postgres = ["dep:deadpool-postgres", "dep:pgvector", "dep:tokio-postgres"]
