[package]
name = "thinclaw-desktop"
version = "0.15.0"
description = "ThinClaw desktop companion app"
authors = ["RNT56"]
license = "GPL-3.0-only"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ---------------------------------------------------------------------------
# Inference Engine Features — each build targets ONE engine per platform
# ---------------------------------------------------------------------------
[features]
default = ["llamacpp", "runtime-libsql", "docker-sandbox"]
llamacpp = []     # Bundled llama-server sidecar — all platforms
# Local Docker sandbox: lets the desktop app spawn coding/worker containers
# (used by the repo project supervisor) when sandbox + repo_projects are enabled.
docker-sandbox = ["thinclaw_core/docker-sandbox"]
mlx = []          # External Python process via uv — macOS Apple Silicon only
vllm = []         # External Python process via uv — Linux CUDA only
ollama = []       # Detect existing Ollama daemon — all platforms
runtime-common = [
    "thinclaw_core/html-to-markdown",
    "thinclaw_core/document-extraction",
    "thinclaw_core/repl",
    "thinclaw_core/timezones",
]
runtime-libsql = ["thinclaw_core/desktop"]
runtime-postgres = ["runtime-common", "thinclaw_core/postgres"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "sqlite", "derive", "macros", "migrate"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
rand = "0.8"
futures = "0.3.31"
bytes = "1"
tauri-specta = { version = "^2.0.0-rc", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc", features = ["derive", "serde", "serde_json"] }
specta-typescript = "0.0.7"
usearch = "2.23.0"
pdf-extract = "0.12"
ort = { version = "=2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = "0.23.1"
image = { version = "0.25.9", features = ["jpeg", "png", "webp"] }
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4", "v5", "fast-rng", "macro-diagnostics"] }
sysinfo = "0.38"
tempfile = "3.24.0"
scraper = "0.27.0"
chrono = "0.4.43"
cron = "0.17"
rig-core = "0.7.0"
html2text = "0.17.1"
urlencoding = "2"
eventsource-stream = "0.2.3"
chromiumoxide = { version = "0.9.1" }
open = "5"
zip = "0.6"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

tokio-stream = "0.1.18"
sha2 = "0.11"
hex = "0.4"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tungstenite = "0.26"
futures-util = "0.3"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem"] }
regex = "1.12.3"
thinclaw-desktop-tools = { path = "scrappy-mcp-tools" }
rhai = { version = "1", features = ["sync", "serde"] }
async-trait = "0.1"
clawscan = "1.0.0"
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }

# Cloud storage (Work Stream A)
opendal = { version = "0.58", git = "https://github.com/apache/opendal.git", rev = "e42589ad764db6f659e029fc41a83e12b7fb9a92", features = ["services-s3", "services-webdav", "services-sftp"] }
aes-gcm = "0.11"
hkdf = "0.13"
zstd = "0.13"

# ThinClaw agent engine (root crate; runtime DB backend is selected by features)
thinclaw_core = { path = "../../..", package = "thinclaw", default-features = false, features = ["tunnel"] }
thinclaw-config = { path = "../../../crates/thinclaw-config" }
thinclaw-runtime-contracts = { path = "../../../crates/thinclaw-runtime-contracts", features = ["specta"] }
thinclaw-tools = { path = "../../../crates/thinclaw-tools" }
thinclaw-tools-core = { path = "../../../crates/thinclaw-tools-core" }
thinclaw-platform = { path = "../../../crates/thinclaw-platform" }
thinclaw-secrets = { path = "../../../crates/thinclaw-secrets", default-features = false }

#[cfg] secure no-follow file opens for migration inputs
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS Keychain — secure encrypted storage for API keys
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }

# ---------------------------------------------------------------------------
# Build Profiles — keep target/ size under control
# ---------------------------------------------------------------------------

[profile.dev]
# "line-tables-only" keeps file:line info for backtraces but strips the huge
# type/variable debug info that accounts for ~60% of target/ size.
debug = "line-tables-only"
# On macOS, split debug info into small .o files instead of one giant dSYM
split-debuginfo = "unpacked"
incremental = true

[profile.release]
# Thin LTO across all crates — better codegen without massive compile times
lto = "thin"
# Single codegen unit → better optimisation, smaller binary
codegen-units = 1
# Strip debug symbols from the final binary
strip = "symbols"

# Keep local, provenance-documented security/compatibility backports in the
# dependency graph until upstream crates publish equivalent releases.
[patch.crates-io]
libsql = { path = "../../../patches/libsql-0.6.0" }
libsql-sqlite3-parser = { path = "../../../patches/libsql-sqlite3-parser-0.13.1" }
glib = { path = "../../../patches/glib-0.18.6" }
